--- a/components/src/pages/MainPage/style.module.scss
+++ b/components/src/pages/MainPage/style.module.scss
@@ -17,7 +17,8 @@
 .playersContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 50px;
   margin-top: 30px;
   width: 100%;
   padding: 0 10px;
