--- a/components/src/pages/RootPage/Header/style.module.scss
+++ b/components/src/pages/RootPage/Header/style.module.scss
@@ -2,9 +2,13 @@
 
 .header {
   display: flex;
-  justify-content: space-between;
+  gap: 20%;
   align-items: center;
   background-color: basics.$purple;
   width: 100%;
   height: 70px;
+}
+
+.button {
+  width: 200px;
 }
