--- a/components/src/components/SearchBar/style.module.scss
+++ b/components/src/components/SearchBar/style.module.scss
@@ -1,3 +1,5 @@
+@use "src/sass" as basics;
+
 .searchBar {
   width: 40%;
   height: 40px;
@@ -7,4 +9,19 @@
   background-repeat: no-repeat;
   align-self: center;
   font-size: 25px;
+  display: flex;
+  gap: 10px;
+}
+
+.submitButton {
+  cursor: pointer;
+  transition: all 1s ease;
+  border: none;
+  color: basics.$white;
+  background-color: basics.$red-purple;
+  border-radius: 5px;
+
+  &:hover {
+    transform: scaleX(1.05);
+  }
 }
