--- a/components/src/components/SearchBar/style.module.scss
+++ b/components/src/components/SearchBar/style.module.scss
@@ -1,18 +1,5 @@
 @use "src/sass" as basics;
 
-.searchBar {
-  width: 40%;
-  height: 40px;
-  padding-left: 40px;
-  background-image: url("src/assets/svg/searcher.svg");
-  background-size: 40px;
-  background-repeat: no-repeat;
-  align-self: center;
-  font-size: 25px;
-  display: flex;
-  gap: 10px;
-}
-
 .submitButton {
   cursor: pointer;
   transition: all 1s ease;
@@ -24,4 +11,11 @@
   &:hover {
     transform: scaleX(1.05);
   }
+}
+
+.hidden {
+  cursor: default;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  pointer-events: none;
 }
