--- a/components/src/pages/MainPage/style.module.scss
+++ b/components/src/pages/MainPage/style.module.scss
@@ -20,6 +20,7 @@
 .playersContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -30,4 +31,17 @@
 .serverError {
   color: basics.$purple;
   font-size: 30px;
+}
+
+.searchBar {
+  width: 40%;
+  height: 40px;
+  padding-left: 40px;
+  background-image: url("src/assets/svg/searcher.svg");
+  background-size: 40px;
+  background-repeat: no-repeat;
+  align-self: center;
+  font-size: 25px;
+  display: flex;
+  gap: 10px;
 }
