--- a/components/src/pages/RootPage/style.module.scss
+++ b/components/src/pages/RootPage/style.module.scss
@@ -6,6 +6,14 @@
   overflow: hidden;
 }
 
+.hidden {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100vh;
+  z-index: 1;
+  overflow: hidden;
+  cursor: pointer;
+}
+
 .background {
   background-image: url("src/assets/png/pattern1.png"), url("src/assets/png/pattern1.png"), linear-gradient(to right, rgb(2, 239, 255), rgb(98, 123, 255));
   background-position: 50% -460px, right -73px bottom -24px, 0px center;
@@ -22,4 +30,9 @@
     width: 350px;
     height: 150px;
   }
+}
+
+.hiddenBackground {
+  background-image: url("src/assets/png/pattern1.png"), url("src/assets/png/pattern1.png"), linear-gradient(to right, rgba(2, 239, 255, 0.1), rgba(98, 123, 255, 0.1));
+
 }
