--- a/components/src/components/ModalWindowContainer/ModalWindow/style.module.scss
+++ b/components/src/components/ModalWindowContainer/ModalWindow/style.module.scss
@@ -9,13 +9,12 @@
   width: 300px;
   height: 450px;
   border: none;
-  padding: 0;
 }
 
 .topPart {
   width: 100%;
   height: 300px;
-  background-image: url("src/assets/png/pattern1.png"), url("src/assets/png/pattern1.png"), linear-gradient(to right, rgb(2, 239, 255), rgb(98, 123, 255));
+  background-image: url("../../../assets/png/pattern1.png"), url("../../../assets/png/pattern1.png"), linear-gradient(to right, rgb(2, 239, 255), rgb(98, 123, 255));
   background-position: 50% -460px, right -73px bottom -24px, 0px center;
   background-size: 618px 873px, 618px 873px, auto;
   background-repeat: no-repeat;
